--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div id="root" class="p-20"></div>
+    <div id="root" class="md:p-5 lg:p-20"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
